--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(230, 88, 88);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Avenir;
     width: 100vw;
     margin: 0;
     display: flex;
@@ -17,7 +17,6 @@ body {
     display: grid;
     grid-template-columns: 210px 1fr;
     height: 800px;
-    background-color: aquamarine;
 }
 
 #sidebar {
@@ -28,7 +27,7 @@ body {
 
 #main-content-container {
     height: 100%;
-    background-color: coral;
+    background-color: rgb(255, 251, 250);
 }
 
 #footer {
