--- a/src/Components/Results.css
+++ b/src/Components/Results.css
@@ -1,5 +1,6 @@
 .result-video-preview {
-    width: 1000px;
+    min-width: 1000px;
+    width: 95%;
     height: 220px;
     margin-bottom: 20px;
     margin-left: auto;
