--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@ body {
 #main-content-container {
     height: 100%;
     background-color: rgb(255, 251, 250);
+    overflow: scroll; 
 }
 
 #footer {
