--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -3,12 +3,9 @@
     justify-content: center;
     align-content: center;
     height: 100%;
-
-    img {
-        height: 40px;
+    height: 40px;
         margin-top: auto;
         margin-bottom: auto;
-    }
 }
 
 #query-container {
@@ -16,10 +13,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-
-    img {
-        height: 20px;
-    }
 }
 
 #query-box {
@@ -30,7 +23,15 @@
     text-align: center;
 }
 
+#search-button {
+    background-color: transparent;
+    border: none;
+}
+
+#search-submit-button {
+    height: 20px;
+}
+
 input:focus {
     outline-color: #FF0000;
-
 }
