--- a/src/Components/ShowPage.css
+++ b/src/Components/ShowPage.css
@@ -1,7 +1,7 @@
 .video-container {
     margin: 20px auto;
-    width: 1000px;
-    height: 750px;
+    width: 750px;
+    height: 450px;
     /* border: 5px solid black; */
     padding: 20px;
     display: flex;
@@ -10,10 +10,14 @@
 }
 
 .video-view {
-    width: 800px;
-    height: 500px;
+    margin: 30px auto;
+    width: 640px;
+    height: 360px;
     background-color: #8e8d8d;
-    margin: auto;
+}
+
+#ytplayer {
+    margin: 30px auto;
 }
 
 .details-container {
